oop_mro/tests/trybuild/fail_duplicate_constructor.stderr
error: duplicate constructor for class `Animal`
 --> tests/trybuild/fail_duplicate_constructor.rs:6:9
  |
6 |         constructor(name: String) {}
  |         ^^^^^^^^^^^
