oop_mro/tests/trybuild/fail_duplicate_constructor.rs
use oop_mro::prelude::*;

oop_class! {
    class Animal {
        constructor() {}
        constructor(name: String) {}
    }
}

fn main() {}
